--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -140,7 +140,7 @@
                     </div>
                 </section>
             </div>
-
+            <!-- Row posts -->
             <div th:if="${comp.type == 'row_posts'}">
                 <section id="posts" class="py-24">
                     <div class="max-w-7xl mx-auto px-6">
