👨‍💻 Dev (refacto projects page)

--- a/src/main/resources/templates/admin/pages/edit.html
+++ b/src/main/resources/templates/admin/pages/edit.html
@@ -262,7 +262,7 @@
                         </div>
 
                         <!-- COMPOSANT ROW_VIDEO -->
-                        <div th:if="${compEntry.value['type'] == 'row_video'}">>
+                        <div th:if="${compEntry.value['type'] == 'row_video'}">
                             <h4 class="mb-3">Configuration Galerie Vidéo</h4>
 
                             <div class="row">
