--- a/src/main/resources/templates/layout/front.html
+++ b/src/main/resources/templates/layout/front.html
@@ -51,6 +51,6 @@
         </div>
     </footer>
     <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/player.js"></script>
+    <script src="/assets/js/player.js" defer></script>
 </body>
 </html>
