--- a/src/main/resources/templates/admin/pages/list.html
+++ b/src/main/resources/templates/admin/pages/list.html
@@ -28,6 +28,13 @@
                                     <button class="table-sort d-flex justify-content-between" data-sort="sort-status">URL</button>
                                 </th>
                                 <th>
+                                    <button class="table-sort d-flex justify-content-between" data-sort="sort-status">Components</button>
+                                </th>
+                                <th>
+                                    <button class="table-sort d-flex justify-content-between" data-sort="sort-status">Last updated</button>
+                                </th>
+                                <th>
+                                    
                                 </th>
                             </tr>
                             </thead>
@@ -40,6 +47,12 @@
                                     <div class="badges-list">
                                         <a class="badge" th:href="${'/' + page}"><span th:text="${'/' + page}">default-content</span></a>
                                     </div>
+                                </td>
+                                <td class="sort-tags">
+                                    0
+                                </td>
+                                <td class="sort-tags">
+                                    20-09-2025 21:45
                                 </td>
                                 <td class="text-end">
                                     <div class="dropdown">
