--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -4,26 +4,31 @@
 <body>
 <main layout:fragment="content">
     <link href="/assets/css/tabler.css" rel="stylesheet" />
-    <div class="page page-center">
-        <div class="container container-tight py-4">
-            <div class="card card-md">
-                <div class="card-body">
-                    <h2 class="h2 text-center mb-4">Login to your account</h2>
-                    <form th:action="@{/users/login}" method="POST" autocomplete="off" novalidate="">
-                        <div class="mb-3">
-                            <label class="form-label">Email address</label>
-                            <input type="text" name="username" class="form-control" autocomplete="off" />
-                        </div>
-                        <div class="mb-2">
-                            <label class="form-label">
-                                Password
-                                <span class="form-label-description">
+    <link href="/assets/css/tabler-themes.css" rel="stylesheet" />
+    <style>@import url("https://rsms.me/inter/inter.css");</style>
+    <script src="/assets/js/tabler-theme.js"></script>
+    <div class="page">
+        <div class="container-fluid">
+            <div class="row min-vh-100 d-flex align-items-center justify-content-center">
+                <div class="col-md-2">
+                    <div class="card card-md align-middle">
+                        <div class="card-body">
+                            <h2 class="h2 text-center mb-4">Login to your account</h2>
+                            <form th:action="@{/users/login}" method="POST" autocomplete="off" novalidate="">
+                                <div class="mb-3">
+                                    <label class="form-label">Email address</label>
+                                    <input type="text" name="username" class="form-control" autocomplete="off" />
+                                </div>
+                                <div class="mb-2">
+                                    <label class="form-label">
+                                        Password
+                                        <span class="form-label-description">
                                     <a href="#">Mot de passe oublié ?</a>
                                 </span>
-                            </label>
-                            <div class="input-group input-group-flat">
-                                <input type="password" name="password" class="form-control" autocomplete="off" />
-                                <span class="input-group-text">
+                                    </label>
+                                    <div class="input-group input-group-flat">
+                                        <input type="password" name="password" class="form-control" autocomplete="off" />
+                                        <span class="input-group-text">
                                     <a href="#" class="link-secondary" data-bs-toggle="tooltip" aria-label="Show password" data-bs-original-title="Show password">
                                         <!-- Download SVG icon from http://tabler.io/icons/icon/eye -->
                                         <svg
@@ -43,21 +48,24 @@
                                         </svg>
                                     </a>
                                 </span>
-                            </div>
+                                    </div>
+                                </div>
+                                <div class="mb-2">
+                                    <label class="form-check">
+                                        <input type="checkbox" class="form-check-input" />
+                                        <span class="form-check-label">Remember me on this device</span>
+                                    </label>
+                                </div>
+                                <div class="form-footer">
+                                    <button type="submit" class="btn btn-primary w-100">Sign in</button>
+                                </div>
+                            </form>
                         </div>
-                        <div class="mb-2">
-                            <label class="form-check">
-                                <input type="checkbox" class="form-check-input" />
-                                <span class="form-check-label">Remember me on this device</span>
-                            </label>
-                        </div>
-                        <div class="form-footer">
-                            <button type="submit" class="btn btn-primary w-100">Sign in</button>
-                        </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
 </main>
 </body>
