--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -4,29 +4,6 @@
 <body class="bg-dark-secondary">
 <main layout:fragment="content">
     <div th:each="compEntry : ${page.components}">
-        <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
-        <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
-        <script>
-            const player = new Plyr('#player');
-        </script>
-        <style>
-            /* Conteneur Plyr full-width */
-            .plyr__video-embed {
-                position: relative;
-                width: 100%;           /* prend toute la largeur */
-                padding-top: 56.25%;   /* ratio 16:9 (hauteur/largeur = 9/16) */
-            }
-
-            /* iframe à l'intérieur du conteneur */
-            .plyr__video-embed iframe {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-            }
-        </style>
-
         <div th:with="comp=${compEntry.value}">
             <!-- Hero -->
             <div th:if="${comp.type == 'hero' && comp.status == 'enable'}">
@@ -49,12 +26,11 @@
                             <a th:each="button : ${comp.buttons}" th:href="${button.value.url}" th:if="${button.value.style == 2 && comp.button == true}" class="border-2 border-accent-orange text-accent-orange px-8 py-4 mx-2 rounded-lg font-semibold text-lg hover:bg-accent-orange hover:text-dark transition-all duration-300">
                                 <span th:text="${button.value.text}">default-content</span>
                             </a>
-
                             <br><br><br><br>
                             <br><br><br><br>
                         </div>
                     </div>
-                    <svg class="absolute bottom-0 left-0 w-full mt-10 z-[50]" style="pointer-events: none;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <svg class="absolute bottom-0 left-0 w-full mt-10    z-10" style="pointer-events: none; bottom: -2px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                         <path fill="#111827" fill-opacity="1" d="M0,192L60,202.7C120,213,240,235,360,245.3C480,256,600,256,720,234.7C840,213,960,171,1080,170.7C1200,171,1320,213,1380,234.7L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
                     </svg>
                 </section>
@@ -246,17 +222,17 @@
                                 <!-- VIDEO -->
                                 <div class="p-4">
                                     <!-- Vidéo locale -->
-                                    <video th:if="${entry.value.modal.video.type == 'file'}" controls class="w-full rounded-lg">
+                                    <video id="player-file" th:if="${entry.value.modal.video.type == 'file'}" controls class="w-full rounded-lg">
                                         <source th:src="@{${entry.value.modal.video.url}}" type="video/mp4">
                                     </video>
                                     <!-- Vidéo YouTube -->
-                                    <div th:if="${entry.value.modal.video.type == 'youtube'}" class="relative w-full" style="padding-top:56.25%;">
-                                        <iframe th:src="@{${entry.value.modal.video.url}}"
-                                                class="absolute top-0 left-0 w-full h-full rounded-lg"
-                                                frameborder="0"
-                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                                allowfullscreen>
-                                        </iframe>
+                                    <div th:if="${entry.value.modal.video.type == 'youtube'}" class="relative w-full">
+                                        <div id="player-youtube"
+                                             th:if="${entry.value.modal.video.type == 'youtube'}"
+                                             data-plyr-provider="youtube"
+                                             th:attr="data-plyr-embed-id=${entry.value.modal.video.url}"
+                                             class="w-full rounded-lg"></div>
+
                                     </div>
                                 </div>
                                 <!-- DESCRIPTION -->
@@ -271,6 +247,23 @@
             </div>
 
         </div>
+        <style>
+            /* Conteneur Plyr full-width */
+            .plyr__video-embed {
+                position: relative;
+                width: 100%;           /* prend toute la largeur */
+                padding-top: 56.25%;   /* ratio 16:9 (hauteur/largeur = 9/16) */
+            }
+
+            /* iframe à l'intérieur du conteneur */
+            .plyr__video-embed iframe {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+        </style>
     </div>
 </main>
 </body>
